2009-08-06  Olaf Till <olaf.till@uni-jena.de>

	* geometry/griddata.m: Linearize arrays.

2009-08-05  Olli Saarela  <olli.saarela@gmail.com>

	* plot/__gnuplot_get_var__.m: If read fails to return data, sleep
	before trying again.

2009-08-04  Pieter Eendebak <pieter.eendebak@gmail.com> 

	* set/setxor.m: Support cell arrays of strings.

2009-08-03  Jaroslav Hajek  <highegg@gmail.com>

	* general/sub2ind.m: Remove source.
	* general/ind2sub.m: Remove source.
	* general/Makefile.in: Update.

2009-08-02  Ben Abbott <bpabbott@mac.com>

	* plot/gnuplot_drawnow.m: Avoid the flickering x11 window seen with
	rapid replots by avoidng setting multiplot mode. This fix only
	functions for a single axes with no image objects.
	* plot/__go_draw_figure__.m: Move 'set multiplot' to gnuplot_drawnow.

2009-07-31  Jaroslav Hajek  <highegg@gmail.com>

	* general/common_size: Optimize.

2009-07-29  Ben Abbott <bpabbott@mac.com>

	* plot/__go_draw_axes__.m: Fix ticklabels specified as 2D character
	array.
	* plot/__go_draw_axes__.m: Ignore fontnames for the Lua-TikZ terminal.
	* plot/gnuplot_drawnow.m: Support the gnuplot terminal Lua-TikZ.
	* plot/print.m: Support the gnuplot terminal Lua-TikZ.

2009-07-29  Jaroslav Hajek  <highegg@gmail.com>

	* plot/gnuplot_binary.m: Fix typo.

2009-07-27  Jaroslav Hajek  <highegg@gmail.com>

	* optimization/fzero.m: Use "global" parameter in str2func.
	* optimization/fsolve.m: Ditto.
	* optimization/fminunc.m: Ditto.

2009-07-24  John W. Eaton  <jwe@octave.org>

	* plot/gnuplot_binary.in: Accept arguments in addition to program name.
	* plot/__gnuplot_open_stream__.m: Pass additional args to gnuplot.

2009-07-23  Ben Abbott <bpabbott@mac.com>

	* plot/legend.m: Add an hggroup demo using bar(). Include clf()
	in each demo.

2009-07-23  John W. Eaton  <jwe@octave.org>

	* image/imread.m: Fix test.

	* plot/legend.m: Process arguments in order, child objects in
	reverse.  Remove special case for single label.  New demos.
